syntax = "proto3";

option go_package = "tsuwari/grpc/eval";

service Eval {
  rpc Process(Evaluate) returns (EvaluateResult) {}
}

message Evaluate {
  string script = 1;
}

message EvaluateResult {
  string result = 1;
}